--- a/hzaun-app-base/build.gradle
+++ b/hzaun-app-base/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.library'
 
+'hzaun'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.hzaun'
+
 android {
     compileSdkVersion 28
 
